<resources>
    <string name="app_name">家庭存储</string>
    <string name="text_object_name">物品名称</string>
    <string name="text_object_num">数量</string>
    <string name="text_object_group">分组(可选)</string>
    <string name="text_object_expiration_time">过期时间(可选)</string>
    <string name="text_object_expiration_time_default">未设置</string>
    <string name="text_item_update">编辑</string>
    <string name="text_item_delete">删除</string>
    <string name="text_item_add_shopping_cart">添加到备货</string>
    <string name="text_item_add_shopping_cart_success">已添加</string>
    <string name="text_item_example_alert">请添加数据后操作</string>
    <string name="text_item_delete_confirm">确定要删除%s吗</string>
    <string name="text_item_info_bean_num">数量:%d</string>
    <string name="text_item_info_bean_edit_time">编辑时间:%s</string>
    <string name="text_item_info_bean_expiration_time">过期时间:%s</string>
    <string name="text_item_expiration_soon">即将过期</string>
    <string name="text_item_expiration_already">已过期</string>
    <string name="text_item_edit_alert">请不要编辑样例</string>
    <string name="text_item_add_name_alert">请输入物品名称</string>
    <string name="text_item_add_num_alert">请输入物品数量</string>
    <string name="text_item_add_success">已保存</string>
    <string name="text_item_add_title">添加物品</string>
    <string name="text_item_edit_success">编辑成功</string>
    <string name="text_item_edit_title">编辑物品</string>
    <string name="text_error">数据异常</string>
    <string name="text_settings_title">设置</string>
    <string name="text_version">版本号</string>
    <string name="text_settings_notice_time">临期提醒天数</string>
    <string name="text_settings_notice_time_unit">%d天</string>
    <string name="text_settings_notice_time_error_number">请输入正确的天数</string>
    <string name="text_settings_notice_time_subtitle">定义到期前多少天属于临近过期</string>
    <string name="text_settings_notice_time_hint">请输入1到365之间的数字</string>
    <string name="text_settings_success">设置成功</string>
    <string name="text_settings_clear">清空数据</string>
    <string name="text_settings_clear_confirm_tile">确认清空数据</string>
    <string name="text_settings_clear_confirm_subtitle">设置数据将保留</string>
    <string name="text_settings_resource">引用资源</string>
    <string name="text_settings_clear_success">清空完成</string>
    <string name="text_settings_github">项目地址</string>
    <string name="text_settings_show_model">列表显示模式</string>
    <string name="text_settings_manage_groups">管理分组</string>
    <string name="text_settings_show_model_subtitle">首页列表显示模式</string>
    <string name="text_settings_show_model_default">简单</string>
    <string name="text_settings_show_model_group">分组</string>
    <string name="text_shopping_cart_title">备货清单</string>
    <string name="text_shopping_cart_update_success">更新成功</string>
    <string name="text_shopping_cart_default">这是样例</string>
    <string name="text_guide_item_info">长按编辑、删除、添加到备货清单</string>
    <string name="text_guide_add">添加物品</string>
    <string name="text_guide_to_shopping_cart">前往备货清单</string>
    <string name="text_guide_shopping_cart_object">左右滑出删除</string>
    <string name="text_guide_shopping_cart_add">添加物品</string>
    <string name="text_guide_shopping_cart_done">保存修改</string>
    <string name="text_guide_manager_group_drag">点击重命名或者删除\n长按并拖动更改排序</string>
    <string name="text_group_select_title">设置分组</string>
    <string name="text_group_select_create">新建分组</string>
    <string name="text_group_select_delete">删除分组</string>
    <string name="text_group_select_create_error">请输入正确的文本</string>
    <string name="text_group_empty">未分组</string>
    <string name="text_group_edit_name">重命名</string>
    <string name="text_group_edit_name_error">命名重复</string>
    <string name="text_group_edit_error">默认分组只能修改排序，不可重命名或删除</string>
</resources>